@@ -438,13 +438,8 @@ Transcripts:
 .br
 Numeric tower: rational and complex numbers.
 .br
-Numeric procedures and syntax:
-.BR #
-as digits of inexact numbers,
-.BR acos ,
+Numeric procedures:
 .BR angle ,
-.BR asin ,
-.BR atan ,
 .BR complex? ,
 .BR denominator ,
 .BR imag-part ,
