@@ -57,7 +57,7 @@
  #endif
  #ifndef _POSIX_SOURCE
   #define _POSIX_SOURCE
-  #define _POSIX_C_SOURCE 200112
+  #define _POSIX_C_SOURCE 200112L
  #endif
 #endif
 
