@@ -191,6 +191,24 @@
 (test 12345678.901F10 1.2345678901e+17)
 (test 12345678.901L10 1.2345678901e+17)
 (test 12345678.901S10 1.2345678901e+17)
+(test 0# 5)
+(test 0##### 55555)
+(test 0#####00000 5555500000)
+(test 1234#67890 1234567890)
+(test .# 0.5)
+(test 1.# 1.5)
+(test 1.##### 1.55555)
+(test 1.1#3#5#7#9 1.153555759)
+(test 1e# 1e5)
+(test 1e### 1e555)
+(test 1e+# 1e5)
+(test 1e-# 1e-5)
+(test +# 5)
+(test +#.# 5.5)
+(test +###.### 555.555)
+(test -# -5)
+(test -#.# -5.5)
+(test -###.### -555.555)
 
 ; and
 (test (and) #t)
